{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Platform",
            "id": "3d5e81c1-b7ef-470b-97bb-f55ded35fccb",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b94514a7-da98-40cf-b8ca-07058bc3b33e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShortJump",
                    "type": "Button",
                    "id": "5ac3884b-e719-4124-bf96-a0340dc45366",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "LongJump",
                    "type": "Button",
                    "id": "ca161fab-b58b-417d-9224-76ef525174d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch to TopDown",
                    "type": "Button",
                    "id": "b6c0c1f4-b0be-4f55-acf3-8dfdd3e3d760",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "b3137912-b5f0-4665-8c50-5afe35bee3ef",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "04bc8682-26d4-4993-a517-17c97961e19c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f49c072a-c218-4542-a7c6-5c969194548b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3e3f27f3-520f-427a-8167-52e045364692",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ed722b1f-99a7-4454-962f-451536ed1daf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Dpad",
                    "id": "3ee4279b-c3ff-4c6d-8986-c2be23d55a9e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4993d04b-562d-4ce3-ab37-e34ceb03fc3c",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "39ae18d9-7bdc-4261-9d3b-ce37c195edac",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9accca34-cfe0-405d-9fd0-da4a1363abad",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5a8cf3bf-77d2-472d-9c07-8bf71151ebf9",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Ketchup",
                    "id": "1b4064db-b393-4515-bb40-0f5f7963a52a",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "408800c2-c9bd-4ab7-94ec-50babe2ea186",
                    "path": "<HID::Microntek              USB Joystick          >/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "63690835-0df9-4460-9b65-d431130b383f",
                    "path": "<HID::Microntek              USB Joystick          >/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "40c1d53b-af1f-48ed-8154-a86bcafa7a09",
                    "path": "<HID::Microntek              USB Joystick          >/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b6ddb59a-0c90-46e9-a7b7-bf058ba792af",
                    "path": "<HID::Microntek              USB Joystick          >/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "494aef95-89da-40cf-9471-62a93e9ea400",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ShortJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cb8c208-1f1c-46c9-87ce-17ffad1dd964",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ShortJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8558ee6-b9a4-4281-bd8c-8cf5d3ad5a07",
                    "path": "<HID::Microntek              USB Joystick          >/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84541527-f0d3-49b0-b89a-dc15484cc7de",
                    "path": "<Keyboard>/space",
                    "interactions": "Hold(duration=0.3,pressPoint=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "LongJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49c1176e-90e5-4c50-bd82-26e5866498f0",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Hold(duration=0.3,pressPoint=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "LongJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a055b371-71dc-4b13-b8d8-d764c982ab80",
                    "path": "<HID::Microntek              USB Joystick          >/button2",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "LongJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb8cff2f-7129-4ef6-81b5-a27ce0cf83ce",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Switch to TopDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d331af0-92c5-4c78-87ac-78765b5a0cc1",
                    "path": "<HID::Microntek              USB Joystick          >/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch to TopDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TopDown",
            "id": "2768f0fc-1ecb-4c92-bc19-d258d86531e0",
            "actions": [
                {
                    "name": "Fly",
                    "type": "Value",
                    "id": "8be44c85-393b-4963-a1d4-ce77b6b829c0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Switch to Platform",
                    "type": "Button",
                    "id": "86fe8f0b-fca1-45b7-8535-0816e774b69a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "5c37b6c4-9124-4196-9591-8fc1b06b5ca9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "12c0e432-ed42-4eae-97d9-e6d98a6c1898",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "85861b4f-5594-4045-93a0-bf158b32c55d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a1b5af25-5b03-4f00-b6c4-7ce52b787619",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "73b89b44-ce74-4420-85f1-3098329acc16",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "DPad",
                    "id": "7be1af3a-e520-4ecd-81fd-bb5fceaa3b30",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1a7459e4-0049-46f3-a505-4e0e5c54bfc9",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d2856b98-5e9e-4bb1-a983-18053ec02424",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "82fef325-71e4-4b73-870e-51b36ea787fc",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "76e31b79-64f6-4737-a92d-f722f78bf57b",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7e3fafc8-8b79-4419-9118-e62d75784d0c",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Switch to Platform",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2cdd8ce-de84-4af2-a27d-d6f48c26e8d5",
                    "path": "<HID::Microntek              USB Joystick          >/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch to Platform",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}